[gd_scene load_steps=12 format=2]

[ext_resource path="res://Planeta.tscn" type="PackedScene" id=1]
[ext_resource path="res://Plataforma.tscn" type="PackedScene" id=2]
[ext_resource path="res://jose.gd" type="Script" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://jose.tscn" type="PackedScene" id=6]

[sub_resource type="SphereShape" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="BoxShape" id=4]

[sub_resource type="SphereShape" id=5]

[node name="Main" type="Spatial"]
script = ExtResource( 5 )

[node name="Planeta" parent="." instance=ExtResource( 1 )]
transform = Transform( 1.01941, 0, 0, 0, 1.01941, 0, 0, 0, 1.01941, 21, -10, 6.4052 )

[node name="Area" type="Area" parent="Planeta"]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Planeta/Area"]
transform = Transform( 12.5, 0, 0, 0, 12.5, 0, 0, 0, 12.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Planeta2" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.611646, 0, 0, 0, 0.611646, 0, 0, 0, 0.611646, 21, -10, -10.0854 )

[node name="Area" type="Area" parent="Planeta2"]
transform = Transform( 0.81, 0, 0, 0, 0.81, 0, 0, 0, 0.81, 0, 0, 1.63494 )

[node name="CollisionShape" type="CollisionShape" parent="Planeta2/Area"]
transform = Transform( 12.5, 0, 0, 0, 12.5, 0, 0, 0, 12.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Plataforma" parent="." instance=ExtResource( 2 )]

[node name="Area" type="Area" parent="Plataforma"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Plataforma/Area"]
transform = Transform( 8.1, 0, 0, 0, 8.1, 0, 0, 0, 8.1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Plataforma3" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, -3.25841e-07, 5.30863e-14, 0, -1.62921e-07, -1, 3.25841e-07, -1, 1.62921e-07, 0, 7.5, 13 )

[node name="Area" type="Area" parent="Plataforma3"]
transform = Transform( 1, 0, 0, 0, 0.4, 9.77524e-08, 0, 9.77524e-08, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Plataforma3/Area"]
transform = Transform( 8.1, 0, 0, 0, 8.1, 0, 0, 0, 8.1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Plataforma2" parent="." instance=ExtResource( 2 )]
transform = Transform( 9.3, 0, 0, 0, 1, 0, 0, 0, 8.8, 0, 61.5, 0 )

[node name="Camera3" type="Camera" parent="."]
transform = Transform( -1.54288e-07, -0.377097, 0.926174, -3.43834e-08, 0.926174, 0.377097, -1, 2.63366e-08, -1.55864e-07, 51.5, 19.382, 0 )

[node name="Camera2" type="Camera" parent="."]
transform = Transform( -1, 5.75736e-08, -1.54268e-08, 5.16191e-08, 0.965926, 0.258819, 2.98023e-08, 0.258819, -0.965926, 0, 11.5, -28.5 )

[node name="jose" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, -5 )
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.13687e-13, 1.5, 0 )

[node name="RayCast" type="RayCast" parent="Player"]
transform = Transform( 4.62, 0, 0, 0, 4.62, 0, 0, 0, 4.62, 0, 0, 0 )

[node name="Plataforma4" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -1.5, 4.88762e-07, 0, -3.25841e-07, -1, 0, 20.5, 0.5 )

[node name="Area" type="Area" parent="Plataforma4"]

[node name="CollisionShape" type="CollisionShape" parent="Plataforma4/Area"]
transform = Transform( 9.2, 0, 0, 0, 3.8, 1.82471e-06, 0, 1.82471e-06, 9.4, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Plataforma5" parent="." instance=ExtResource( 2 )]
transform = Transform( 2.4, 0, 0, 0, -0.899253, -0.43743, 0, 0.43743, -0.899253, 12.5, 19.6918, -19.5 )

[node name="Area" type="Area" parent="Plataforma5"]
transform = Transform( 1, 0, 0, 0, 1, -2.98023e-08, 0, 2.98023e-08, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Plataforma5/Area"]
transform = Transform( 8.51, 0, 0, 0, 2.8, 2.18314e-06, 0, 2.18314e-06, 9.5, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Planeta3" parent="." instance=ExtResource( 1 )]
transform = Transform( 1.32523, 0, 0, 0, 1.32523, 0, 0, 0, 1.32523, 21.5, 2.5, -24.9425 )

[node name="Area" type="Area" parent="Planeta3"]
transform = Transform( 0.81, 0, 0, 0, 0.81, 0, 0, 0, 0.81, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Planeta3/Area"]
transform = Transform( 10.8, 0, 0, 0, 10.8, 0, 0, 0, 10.8, 0, 0, 0 )
shape = SubResource( 5 )
[connection signal="body_entered" from="Planeta/Area" to="jose" method="_on_Area_body_entered"]
[connection signal="body_entered" from="Planeta/Area" to="Player" method="_on_Area_body_entered"]
[connection signal="body_entered" from="Planeta2/Area" to="jose" method="_on_Area_body_entered_planeta2"]
[connection signal="body_entered" from="Planeta2/Area" to="Player" method="_on_Area_body_entered_planeta2"]
[connection signal="body_entered" from="Plataforma/Area" to="jose" method="_on_Area_body_entered_plat"]
[connection signal="body_entered" from="Plataforma/Area" to="Player" method="_on_Area_body_entered_plat"]
[connection signal="body_entered" from="Plataforma3/Area" to="jose" method="_on_Area_body_entered_plat2"]
[connection signal="body_entered" from="Plataforma3/Area" to="Player" method="_on_Area_body_entered_plat2"]
[connection signal="body_entered" from="Plataforma4/Area" to="jose" method="_on_Area_body_entered_plat4"]
[connection signal="body_entered" from="Plataforma5/Area" to="jose" method="_on_Area_body_entered_plat5"]
[connection signal="body_entered" from="Planeta3/Area" to="jose" method="_on_Area_body_entered_planeta3"]
